--- a/src/app/shared/ribbon/ribbon-button/ribbon-button.component.html
+++ b/src/app/shared/ribbon/ribbon-button/ribbon-button.component.html
@@ -1,4 +1,4 @@
-<a type="button" *ngIf="display" class="c-ribbon-btn" data-toggle="tooltip" data-placement="bottom"
+<a type="button" *ngIf="display()" class="c-ribbon-btn" data-toggle="tooltip" data-placement="bottom"
   tooltip="{{ tooltipText() | translate }}" (click)="handleRibbonButonClick()">
     <div class={{iconClass()}}></div>
     <span class="c-ribbon-text">
