--- a/src/app/shared/ribbon/ribbon-configuration/ribbon-configuration.component.html
+++ b/src/app/shared/ribbon/ribbon-configuration/ribbon-configuration.component.html
@@ -1,7 +1,7 @@
 <!-- <app-slider> -->
     <div class="c-ribbon-container">
         <!-- Navigation section -->
-        <div *ngIf="showGoBackButton" class="c-ribbon br-r">
+        <div *ngIf="showGoBackButton()" class="c-ribbon br-r">
             <app-ribbon-button label="GoBack" iconClass="back-icon ribbon-icon" tooltip="bottom" tooltipText="GoBack"
                 [onButtonClick]="goBack" />
             <div class="c-ribbon-footer" style="text-align: center">
@@ -11,15 +11,14 @@
         <!-- Navigation section  -->
 
         <!-- Worflow/batch class section -->
-        <div *ngIf="checkAccesToWorkflow()"
-            class="c-ribbon br-r">
+        <div *ngIf="checkAccesToWorkflow()" class="c-ribbon br-r">
             <div class="c-ribbon-group">
                 <app-ribbon-button label="Workflows" iconClass="applications-icon ribbon-icon" tooltip="bottom"
                     tooltipText="Workflows" [onButtonClick]="showWorkflowList" [display]="canShowWorkflowList()" />
                 <app-ribbon-button label="NewWorkflow" iconClass="new-app-icon ribbon-icon" tooltip="bottom"
                     tooltipText="NewWorkflow" [onButtonClick]="showNewWorkflowScreen" [display]="showCreateWorkflow()" />
             </div>
-            <div *ngIf="workflowAdministrationActive; else workflowAdministrationInactive" class="c-ribbon-footer">
+            <div *ngIf="workflowAdministrationActive(); else workflowAdministrationInactive" class="c-ribbon-footer">
                 {{ "Workflows" | translate }}
             </div>
             <ng-template #workflowAdministrationInactive>
@@ -32,12 +31,12 @@
         <!-- Worflow/batch class section -->
 
         <!-- Roles sections-->
-        <div *ngIf="showRolesSection" class="c-ribbon br-r">
+        <div *ngIf="showRolesSection()" class="c-ribbon br-r">
             <app-ribbon-button label="RolesPermission" iconClass="roles-permission-icon ribbon-icon" tooltip="bottom"
                 tooltipText="RolesPermission" [onButtonClick]="showRolesList"
                 [display]="canShowRolesList() || rolesAdministrationActive()" />
-            <div *ngIf="canShowRolesList || rolesAdministrationActive">
-                <div *ngIf="rolesAdministrationActive; else rolesAdministrationInactive" class="c-ribbon-footer"
+            <div *ngIf="canShowRolesList() || rolesAdministrationActive()">
+                <div *ngIf="rolesAdministrationActive(); else rolesAdministrationInactive" class="c-ribbon-footer"
                     style="text-align: center">
                     {{ "RolesAdministration" | translate }}
                 </div>
@@ -51,7 +50,7 @@
         <!-- Roles sections-->
 
         <!-- Scanner section -->
-        <div *ngIf="showScannerProfilesSection" class="c-ribbon br-r">
+        <div *ngIf="showScannerProfilesSection()" class="c-ribbon br-r">
             <div class="c-ribbon-group">
                 <app-ribbon-button label="ScannerProfilesDescription" iconClass="scanner-configuration-icon ribbon-icon"
                     tooltip="bottom" tooltipText="ScannerProfilesDescription" [onButtonClick]="showScanProfilesList" />
@@ -59,7 +58,7 @@
                     tooltip="bottom" tooltipText="CreateScannerProfile" [onButtonClick]="showScanProfilesCreationScreen"
                     [display]="showCreateScanProfile()" />
             </div>
-            <div *ngIf="scanProfileActive; else scanProfileInactive" class="c-ribbon-footer">
+            <div *ngIf="scanProfileActive(); else scanProfileInactive" class="c-ribbon-footer">
                 {{ "Scanner" | translate }}
             </div>
             <ng-template #scanProfileInactive>
@@ -71,7 +70,7 @@
         <!-- Scanner section -->
 
         <!-- External props -->
-        <div *ngIf="showExternalPropertiesSection" class="c-ribbon br-r">
+        <div *ngIf="showExternalPropertiesSection()" class="c-ribbon br-r">
             <div class="c-ribbon-group">
                 <app-ribbon-button label="ExternalProperties" iconClass="external-icon ribbon-icon" tooltip="bottom"
                     tooltipText="ExternalProperties" [onButtonClick]="showExternalPropertiesList"
@@ -80,7 +79,7 @@
                     tooltipText="NewExternalProperty" [onButtonClick]="showNewExternalPropertyScreen"
                     [display]="externalPropertiesActive()" />
             </div>
-            <div *ngIf="externalPropertiesActive; else externalPropertiesInactive" class="c-ribbon-footer">
+            <div *ngIf="externalPropertiesActive(); else externalPropertiesInactive" class="c-ribbon-footer">
                 {{ "Administration" | translate }}
             </div>
             <ng-template #externalPropertiesInactive>
@@ -92,14 +91,14 @@
         <!-- External props -->
 
         <!-- Webhook section  -->
-        <div *ngIf="showWebHookSection" class="c-ribbon br-r">
+        <div *ngIf="showWebHookSection()" class="c-ribbon br-r">
             <div class="c-ribbon-group">
                 <app-ribbon-button label="WebHooks" iconClass="webhooks-icon ribbon-icon" tooltip="bottom"
                     tooltipText="WebHooks" [onButtonClick]="showWebHooksList" [display]="canShowWebHooksList()" />
                 <app-ribbon-button label="NewWebHooks" iconClass="webhooks-icon ribbon-icon" tooltip="bottom"
                     tooltipText="NewWebHooks" [onButtonClick]="showWebHookCreateScreen" [display]="webHookActive()" />
             </div>
-            <div *ngIf="webHookActive; else webHookInactive" class="c-ribbon-footer">
+            <div *ngIf="webHookActive(); else webHookInactive" class="c-ribbon-footer">
                 {{ "WebHookAdministration" | translate }}
             </div>
             <ng-template #webHookInactive>
@@ -111,7 +110,7 @@
         <!-- WebHoook Section -->
 
         <!-- Barcode section -->
-        <div *ngIf="showBarcodeSection" class="c-ribbon br-r">
+        <div *ngIf="showBarcodeSection()" class="c-ribbon br-r">
             <div class="c-ribbon-group">
                 <app-ribbon-button label="Barcode" iconClass="barcode-icon ribbon-icon" tooltip="bottom"
                     tooltipText="Barcode" [onButtonClick]="showBatchSeparatorPrinting"
@@ -120,7 +119,7 @@
                     tooltip="bottom" tooltipText="ComposedBarcodeConfiguration"
                     [onButtonClick]="showComposedBarcodeConfiguration" [display]="barcodeSeparatorsPrintActive()" />
             </div>
-            <div *ngIf="barcodeSeparatorsPrintActive; else barcodeSeparatorPrintInactive" class="c-ribbon-footer">
+            <div *ngIf="barcodeSeparatorsPrintActive(); else barcodeSeparatorPrintInactive" class="c-ribbon-footer">
                 {{ "Barcode" | translate }}
             </div>
             <ng-template #barcodeSeparatorPrintInactive>
@@ -131,30 +130,29 @@
         </div>
         <!-- Barcode section -->
 
-
         <!-- Schedule offline -->
-        <div *ngIf="showSynchronizationScheduleSection" class="c-ribbon br-r">
+        <div *ngIf="showSynchronizationScheduleSection()" class="c-ribbon br-r">
             <app-ribbon-button label="OfflineScheduleList" iconClass="schedule-icon-list ribbon-icon" tooltip="bottom"
                 tooltipText="OfflineScheduleList" [onButtonClick]="showScheduleList"
                 [display]="canShowScheduleList()" />
-            <div *ngIf="canShowScheduleList" class="c-ribbon-footer">
+            <div *ngIf="canShowScheduleList()" class="c-ribbon-footer">
                 {{ "OfflineSynchronizationSchedule" | translate }}
             </div>
         </div>
         <!-- Schedule offline -->
 
         <!-- Volume section -->
-        <div *ngIf="showVolumeSection" class="c-ribbon br-r">
+        <div *ngIf="showVolumeSection()" class="c-ribbon br-r">
             <app-ribbon-button label="Volume" iconClass="schedule-icon-list ribbon-icon" tooltip="bottom"
                 tooltipText="Volume" [onButtonClick]="showVolumeCreationModule" [display]="canShowVolumeList()" />
-            <div *ngIf="canShowVolumeList" class="c-ribbon-footer">
+            <div *ngIf="canShowVolumeList()" class="c-ribbon-footer">
                 {{ "VolumeData" | translate }}
             </div>
         </div>
         <!-- Volume section -->
 
         <!-- Garbage -->
-        <div *ngIf="showGarbageSection" class="c-ribbon br-r">
+        <div *ngIf="showGarbageSection()" class="c-ribbon br-r">
             <div class="c-ribbon-group">
                 <app-ribbon-button label="Garbage" iconClass="schedule-icon-list ribbon-icon" tooltip="bottom"
                     tooltipText="Garbage" [onButtonClick]="showGotoGarbage" />
@@ -166,7 +164,7 @@
         <!-- Garbage -->
 
         <!-- Global -->
-        <div *ngIf="showGlobalSection" class="c-ribbon br-r">
+        <div *ngIf="showGlobalSection()" class="c-ribbon br-r">
             <div class="c-ribbon-group">
                 <app-ribbon-button label="Actions" iconClass="applications-icon ribbon-icon" tooltip="bottom"
                     tooltipText="Actions" [onButtonClick]="setRibbonGlobalSection" [display]="!showActionOptions()" />
@@ -191,7 +189,7 @@
         <!-- Global section  -->
 
         <!-- Project section -->
-        <div *ngIf="showProjectSection" class="c-ribbon br-r">
+        <div *ngIf="showProjectSection()" class="c-ribbon br-r">
             <div class="c-ribbon-group">
                 <app-ribbon-button label="ProjectConfig" iconClass="schedule-icon-list ribbon-icon" tooltip="bottom"
                     tooltipText="ProjectConfig" [onButtonClick]="showProjectSectionModule"
@@ -206,31 +204,31 @@
         <!-- Project section -->
 
         <!-- Logger -->
-        <div *ngIf="showGeneralLogSection" class="c-ribbon br-r">
+        <div *ngIf="showGeneralLogSection()" class="c-ribbon br-r">
             <app-ribbon-button label="GeneralLog" iconClass="schedule-icon-list ribbon-icon" tooltip="bottom"
                 tooltipText="GeneralLog" [onButtonClick]="showGeneralLogModule" [display]="canShowGeneralLog()" />
-            <div *ngIf="canShowGeneralLog" class="c-ribbon-footer">
+            <div *ngIf="canShowGeneralLog()" class="c-ribbon-footer">
                 {{ "GeneralLogData" | translate }}
             </div>
         </div>
         <!--Logger -->
 
-        <!-- Licencias OCR TODO:Esto se debe de remover  a otra aplicacion de gestion de estos temas-->
-        <div *ngIf="showLicenseConfiguration" class="c-ribbon br-r">
+        <!-- Licencias OCR -->
+        <div *ngIf="showLicenseConfiguration()" class="c-ribbon br-r">
             <app-ribbon-button label="Licenses" iconClass="schedule-icon-list ribbon-icon" tooltip="bottom"
                 tooltipText="Licenses" [onButtonClick]="showLicenseConfigurationsModule"
                 [display]="canShowLicenseConfigurations()" />
-            <div *ngIf="canShowLicenseConfigurations" class="c-ribbon-footer">
+            <div *ngIf="canShowLicenseConfigurations()" class="c-ribbon-footer">
                 {{ "LicenseConfiguration" | translate }}
             </div>
         </div>
         <!-- Licencias OCR -->
 
         <!-- System metricts -->
-        <div *ngIf="showChartMetricsSection" class="c-ribbon br-r">
+        <div *ngIf="showChartMetricsSection()" class="c-ribbon br-r">
             <app-ribbon-button label="ChartMetricts" iconClass="schedule-icon-list ribbon-icon" tooltip="bottom"
                 tooltipText="ChartMetricts" [onButtonClick]="showChartMetricModule" />
-            <div *ngIf="canShowChartMetrict" class="c-ribbon-footer">
+            <div *ngIf="canShowChartMetrict()" class="c-ribbon-footer">
                 {{ "ChartMetricts" | translate }}
             </div>
         </div>
