--- a/src/app/modules/Site/configuration/sections/workflow/workflow-list/workflow-list.component.html
+++ b/src/app/modules/Site/configuration/sections/workflow/workflow-list/workflow-list.component.html
@@ -1,14 +1,14 @@
 <p>workflow-list works!</p>
-<app-shared-table
-  [tableHeader]="'WorkflowList'"
-  [dataSet]="workflows"
-  [cols]="cols"
-  [enableFilter]="true"
-  [displaySelectorOfPagination]="false"
-  [enableActionsCols]="true"
-  (onClientSelectRow)="onRowSelect($event)">
-  
-  <ng-template let-row #actions>
-    <span>NXC</span>
-  </ng-template>  
+<app-shared-table [cols]="cols" [dataSet]="workflows" [enableActionsCols]="true" [enableFilter]="true"
+  [displaySelectorOfPagination]="false" (onClientSelectRow)="onRowSelect($event)">
+  <ng-template #actions let-rowData>
+    <div class="d-flex gap-2 justify-content-center">
+      <button class="btn btn-primary btn-sm" (click)="editWorkflow(rowData)">
+        <i class="fa fa-edit"></i>
+      </button>
+      <button class="btn btn-warning btn-sm" (click)="archive(rowData)">
+        <i class="fa fa-archive"></i>
+      </button>
+    </div>
+  </ng-template>
 </app-shared-table>
